amend layout slightly to ensure it was aligned with the logo

--- a/application-g-ui/src/Header/Title/Title.css
+++ b/application-g-ui/src/Header/Title/Title.css
@@ -1,7 +1,8 @@
 #title {
-    padding-left: 5%;
+    padding-left: 3%;
 }
 
 .Title {
     padding-top: 1.5%;
+    width: 20%;
 }
